--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,6 +1,6 @@
 {
-        "globals": {
-            "location": "readonly"
-        }
+  "globals": {
+    "location": "readonly"
+  },
+  "parser": "@babel/eslint-parser"
 }
-  
