--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/eslint-parser": "^7.24.5",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
