--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -2,5 +2,9 @@
   "globals": {
     "location": "readonly"
   },
-  "parser": "@babel/eslint-parser"
+
+  "parserOptions": {
+    "parser": "@babel/eslint-parser",
+    "requireConfigFile": false
+  }
 }
