--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^5.32.1",
     "@testing-library/jest-dom": "^5.17.0",
